# bilimanga-downloader

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  MIGRATION.md  README.md  RELEASE_CHECKLIST.md  install.ps1  install.sh  pyproject.toml  todo.md
.github/workflows/: ci.yml  release.yml
scripts/: check_docs_consistency.py
src/bilimanga_dl/: __init__.py  __main__.py
src/bilimanga_dl/core/: __init__.py  cleanup.py  cli.py  client.py  converters.py  downloader.py  errors.py  fileio.py  history.py  http.py  models.py  notify.py  reader.py  reporting.py  runtime.py  selection.py  settings.py  verify.py
src/bilimanga_dl/sites/: __init__.py  base.py  bilimanga.py
tests/: test_bilimanga_adapter.py  test_bilimanga_parser.py  test_cleanup.py  test_cli.py  test_client.py  test_converters.py  test_downloader.py  test_history.py  test_http_client.py  test_models.py  test_notify.py  test_reader.py  test_reporting.py  test_settings.py  test_sites_registry.py  test_url_handling.py  test_verify.py
